--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "builddev": "webpack --mode development",
     "start": "webpack serve",
     "lint":"pretty-quick --staged && lint-staged",
+    "pretty-quick": "pretty-quick",
     "prepare": "husky install"
   },
   "author": "",
@@ -36,7 +37,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint"
+      "pre-commit": "pretty-quick --staged"
    }
   },
   "lint-staged": {
