--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "builddev": "webpack --mode development",
     "start": "webpack serve",
     "lint":"pretty-quick --staged && lint-staged",
-    "pretty-quick": "pretty-quick",
     "prepare": "husky install"
   },
   "author": "",
@@ -37,7 +36,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "lint"
    }
   },
   "lint-staged": {
