--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode production",
     "builddev": "webpack --mode development",
     "start": "webpack serve",
-    "lint":"pretty-quick --staged && lint-staged",
+    "lint": "pretty-quick --staged && lint-staged",
     "prepare": "husky install"
   },
   "author": "",
@@ -27,17 +27,18 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
-    "pretty-quick": "^3.1.1",
     "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lint"
-   }
+    }
   },
   "lint-staged": {
     "*.{ts,js}": "eslint --cache --fix"
