--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gamephaser",
+  "name": "phaser-typescript-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
